# chatui

./: .gitignore  README.md  pyproject.toml
notebooks/: 0_start.ipynb
src/chatui/: chat.py  lang_memory_clean.py
src/chatui/interactions/: code_formatting.py  example_prompts.py  salutations.py  stream_handler.py
